Refactored the code to be compatible with the structure required by Spark packages